# Rivo

./: Anchor.toml  Cargo.toml  README.md  codex-session.jsonl  package-lock.json  package.json  rivo-pitch-deck.html  stablecoin-solana-slide.html  vercel.json
api/: index.js
assets/: usdc-devnet-metadata.json
backend/: .env  .env.example  package-lock.json  package.json
backend/api/: index.js
backend/src/: app.js  platformFee.js  umbraService.js  verifyTransfer.js
metaplex-fix/: package-lock.json  package.json
web/: .env.example  index.html  null.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
web/src/components/: CurrencyPriceAssets.tsx
web/src/config/: tokens.ts
web/src/lib/: api.ts  hiddenProducts.ts  payment.ts  pinataClientUpload.ts  platformConfig.ts  platformFee.ts  productFileUpload.ts  productUtils.ts  solPrice.ts  tokenPayment.ts  umbraPayment.ts
web/src/pages/dashboard/: DashboardAdminPage.tsx  DashboardAnalyticsPage.tsx  DashboardDiscoverPage.tsx  DashboardEditProductPage.tsx  DashboardHomePage.tsx  DashboardNewProductPage.tsx  DashboardPaymentPage.tsx  DashboardProductsPage.tsx  DashboardPurchasesPage.tsx  DashboardSidebar.tsx
web/src/types/: product.ts
